--- a/src/Styles/homepage.css
+++ b/src/Styles/homepage.css
@@ -70,9 +70,9 @@
 
 }
 /*  CARD CSS Start here */
-.card1{
+/* .card1{
   margin-left: 40px;
   height: 300px;
   width: 230px;
   border:  2px solid black;
-}
+} */
