--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1,7 +1,7 @@
 .navbar {
     display: flex;
-    flex-direction: row;
     margin-bottom: 38px;
+    justify-content: space-between;
   }
   .home {
     margin: 22px;
