--- a/src/Styles/homepage.css
+++ b/src/Styles/homepage.css
@@ -1,10 +1,10 @@
 /* src/styles/tailwind.css */
 
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
-.btop{
+.btop {
   position: relative;
   bottom: 80px;
 }
@@ -12,7 +12,7 @@
   display: flex;
   align-items: center;
   height: 350px;
-  width: 100vw;
+  width: 1500px;
   background-color: #d3e2fd;
   margin-bottom: 22px;
 }
@@ -34,14 +34,44 @@
   width: 400px;
 }
 
-
 .clickb {
   margin: 22px;
   height: 40px;
   width: 120px;
   background-color: #0a1d56;
   color: white;
+}
+.Al {
+  display: flex;
+}
 
+.imgContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 320px; /* Adjust margin as needed */
+  margin-top: 22px;
+}
+
+.imglogo,
+.imglogo2,
+.imglogo3 {
+  height: 100px;
+  width: 100px;
+  display: flex;
+}
+
+.textHeading {
+  margin-top: 10px; /* Adjust margin as needed */
+}
+
+
+.textp {
+  font-size: 22px;
+  margin-left: 350px;
+  margin-top: 22px;
+  font-weight: 500;
+  font-weight: bold;
 }
 /*  CARD CSS Start here */
 /* .card1{
