--- a/src/Styles/homeCard.css
+++ b/src/Styles/homeCard.css
@@ -4,6 +4,15 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+/* .card1 {
+  margin-left: 130px;
+  height: 300px;
+  width: 230px;
+  border: 2px solid black;
+  border-radius: 20px;
+  margin-top: 30px;
+} */
+
 .card1 {
   margin-left: 130px;
   height: 300px;
@@ -11,6 +20,12 @@
   border: 2px solid black;
   border-radius: 20px;
   margin-top: 30px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+  transition: transform 0.2s ease-in-out;
+  background-color: #f5f5f5;
+}
+.card1:hover {
+  transform: scale(1.05); 
 }
 .AllCards {
   display: flex;
