--- a/src/Styles/homeCard.css
+++ b/src/Styles/homeCard.css
@@ -25,6 +25,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
   transition: transform 0.2s ease-in-out;
   background-color: #f5f5f5;
+  cursor: pointer;
 }
 .card1:hover {
   transform: scale(1.05); 
