--- a/src/Styles/homepage.css
+++ b/src/Styles/homepage.css
@@ -12,7 +12,7 @@
   display: flex;
   align-items: center;
   height: 350px;
-  width: 1500px;
+  width: 98.8vw;
   background-color: #d3e2fd;
   margin-bottom: 22px;
 }
@@ -59,12 +59,17 @@
   height: 100px;
   width: 100px;
   display: flex;
+  box-shadow: #d3e2fd;
+  transition: transform 0.1s ease-in-out;
+  background-color: #f5f5f5;
 }
 
+.imgContainer:hover {
+  transform: scale(1.15);
+}
 .textHeading {
   margin-top: 10px; /* Adjust margin as needed */
 }
-
 
 .textp {
   font-size: 22px;
