--- a/src/Styles/homepage.css
+++ b/src/Styles/homepage.css
@@ -51,7 +51,9 @@
   align-items: center;
   margin-left: 320px; /* Adjust margin as needed */
   margin-top: 22px;
+  
 }
+
 
 .imglogo,
 .imglogo2,
@@ -63,6 +65,25 @@
   transition: transform 0.1s ease-in-out;
   background-color: #f5f5f5;
 }
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #FFF;
+  border-bottom-color: #FF3D00;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  }
+
+  @keyframes rotation {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+  } 
 
 .imgContainer:hover {
   transform: scale(1.15);
