--- a/src/Styles/homeCard.css
+++ b/src/Styles/homeCard.css
@@ -1,34 +1,23 @@
-/* src/styles/tailwind.css */
-
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
-
-/* .card1 {
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+/* 
+.card1 {
+  justify-content: center;
+  align-items: center;
   margin-left: 130px;
   height: 300px;
   width: 230px;
   border: 2px solid black;
   border-radius: 20px;
   margin-top: 30px;
-} */
-
-.card1 {
-  justify-content: center;
-  align-items: center;
-  margin-left: 130px;  
-  height: 300px;
-  width: 230px;
-  border: 2px solid black;
-  border-radius: 20px;
-  margin-top: 30px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease-in-out;
   background-color: #f5f5f5;
   cursor: pointer;
 }
 .card1:hover {
-  transform: scale(1.05); 
+  transform: scale(1.05);
 }
 .AllCards {
   display: flex;
@@ -38,21 +27,18 @@
   font-size: 22px;
   margin-left: 22px;
 }
-.titletxt ,.priceitem {
+.titletxt,
+.priceitem {
   color: black;
 }
 .priceitem {
   font-size: 18px;
   margin-left: 22px;
 }
-.bannerimg {
-  display: flex;
-  height: 190px;
-  width: 190px;
-  position: relative;
-  justify-content: center;
-}
-.BestSalespd{
-    margin-top: 40px;
+  .bannerimg {
     display: flex;
-}
+    height: 190px;
+    width: 190px;
+    position: relative;
+    justify-content: center;
+  } */
