--- a/src/Styles/homepage.css
+++ b/src/Styles/homepage.css
@@ -1,6 +1,4 @@
-/* src/styles/tailwind.css */
-
-@import "tailwindcss/base";
+/* @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
@@ -49,7 +47,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: 320px; /* Adjust margin as needed */
+  margin-left: 320px; 
   margin-top: 22px;
   
 }
@@ -81,7 +79,7 @@
   transform: scale(1.15);
 }
 .textHeading {
-  margin-top: 10px; /* Adjust margin as needed */
+  margin-top: 10px; 
 }
 
 .textp {
@@ -90,11 +88,4 @@
   margin-top: 22px;
   font-weight: 500;
   font-weight: bold;
-}
-/*  CARD CSS Start here */
-/* .card1{
-  margin-left: 40px;
-  height: 300px;
-  width: 230px;
-  border:  2px solid black;
 } */
